# RLBench

./: .pre-commit-config.yaml  DATA_COLLECTION.md  collect_dataset.sh  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
examples/: test_read_segmentation_masks.ipynb
rlbench/: demo.py  environment.py  task_environment.py
rlbench/backend/: observation.py  scene.py
rlbench/task_ttms/: put_block_in_bin.ttm  reach_single_target.ttm
rlbench/tasks/: __init__.py  put_block_in_bin.py  reach_single_target.py
tools/: dataset_generator.py  demos_visualizer.py  task_builder_ws.py
