[metadata]
name = rlbench
description = RLBench
author = Stephen James
author_email = slj12@ic.ac.uk
url = https://www.doc.ic.ac.uk/~slj12

[options]
install_requires =
    numpy
    Pillow
    pyquaternion
    html-testRunner
    natsort

[flake8]
exclude =
    .git,
    __pycache__,
    build,
    dist,
    docs,
    venv

max-line-length = 80
ignore = E203,W503